--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -6,7 +6,7 @@ body {
 
 textarea{
   background: transparent;
-  border: none;
+  border: 1px solid black;
   resize: none;
   color: #000000;
   border-left: 1px solid black;
@@ -66,15 +66,11 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
-  padding: 10px;
+  padding: 15px;
   width: 60%;
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
-}
-
-.col-8 {
-  vertical-align: top;
 }
